force-app/main/default/objects/Form_Builder__MySubmission__c/fields/Form_Builder__ElementID__c.field-meta.xml
<CustomField>
    <fullName>Form_Builder__ElementID__c</fullName>
    <label>Element ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>