force-app/main/default/objects/Form_Builder__MySubmission__c/fields/Form_Builder__Error_Message__c.field-meta.xml
<CustomField>
    <fullName>Form_Builder__Error_Message__c</fullName>
    <label>Error Message</label>
    <length>255</length>
    <type>Text</type>
</CustomField>