force-app/main/default/objects/Form_Builder__MySubmission__c/fields/Form_Builder__IP__c.field-meta.xml
<CustomField>
    <fullName>Form_Builder__IP__c</fullName>
    <description>IP address</description>
    <label>IP</label>
    <length>64</length>
    <type>Text</type>
</CustomField>