force-app/main/default/objects/Form_Builder__MySubmission__c/fields/Form_Builder__Is_New__c.field-meta.xml
<CustomField>
    <fullName>Form_Builder__Is_New__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is New</label>
    <type>Checkbox</type>
</CustomField>