force-app/main/default/objects/Form_Builder__MySubmission__c/fields/Form_Builder__OldSubmissionId__c.field-meta.xml
<CustomField>
    <fullName>Form_Builder__OldSubmissionId__c</fullName>
    <label>OldSubmissionId</label>
    <length>120</length>
    <type>Text</type>
</CustomField>