force-app/main/default/objects/Form_Builder__MySubmission__c/fields/Form_Builder__ProjectID__c.field-meta.xml
<CustomField>
    <fullName>Form_Builder__ProjectID__c</fullName>
    <label>Project ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>