force-app/main/default/objects/Form_Builder__MySubmission__c/fields/Form_Builder__Status__c.field-meta.xml
<CustomField>
    <fullName>Form_Builder__Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Success</fullName>
            </value>
            <value>
                <fullName>Failed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>